@@ -1,5 +1,7 @@
 package com.project.recycle.service;
 
+import com.project.recycle.controller.RecipeController;
+import com.project.recycle.model.Classification;
 import com.project.recycle.model.Recipe;
 import com.project.recycle.repository.RecipeRepository;
 import com.project.recycle.service.RecipeService;
@@ -14,6 +16,7 @@ import static org.mockito.Mockito.when;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -27,17 +30,21 @@ class RecipeServiceTest {
     RecipeRepository repository;
 
     @Test
-    void saveRecipeTest(){
-        Recipe recipe = new Recipe("vidrio","1. 123\n2. 123");
+    void saveRecipe(){
+        Recipe recipe = new Recipe();
+        recipe.setClassification(Classification.GLASS);
+        recipe.setSteps("\"1. 123\\n2. 123\"");
         repository.save(recipe);
         when(repository.save(recipe)).thenReturn(recipe);
+        Recipe r = service.saveRecipe(recipe);
+        assertEquals(recipe,r);
     }
 
     @Test
-    void getRecipesTest(){
-        Recipe recipe1 = new Recipe("vidrio","1. ASD\n2. ASD");
-        Recipe recipe2 = new Recipe("vidrio","1. ASD\n2. ASD");
-        Recipe recipe3 = new Recipe("vidrio","1. ASD\n2. ASD");
+    void getRecipes(){
+        Recipe recipe1 = new Recipe(Classification.GLASS,"1. ASD\n2. ASD");
+        Recipe recipe2 = new Recipe(Classification.GLASS,"1. ASD\n2. ASD");
+        Recipe recipe3 = new Recipe(Classification.GLASS,"1. ASD\n2. ASD");
 
         List<Recipe> listSaved = new ArrayList<>();
         listSaved.add(recipe1);
@@ -50,13 +57,14 @@ class RecipeServiceTest {
 
 
         when(repository.findAll()).thenReturn(listSaved);
+        assertEquals(service.getRecipes(),listSaved);
     }
 
     @Test
-    void getRecipesByClassificationTest(){
-        Recipe recipe1 = new Recipe("vidrio","1. ASD\n2. ASD");
-        Recipe recipe2 = new Recipe("latas","1. ASD\n2. ASD");
-        Recipe recipe3 = new Recipe("latas","1. ASD\n2. ASD");
+    void getRecipesByClassification(){
+        Recipe recipe1 = new Recipe(Classification.GLASS,"1. ASD\n2. ASD");
+        Recipe recipe2 = new Recipe(Classification.BATTERIES,"1. ASD\n2. ASD");
+        Recipe recipe3 = new Recipe(Classification.BATTERIES,"1. ASD\n2. ASD");
 
         List<Recipe> listSaved = new ArrayList<>();
         listSaved.add(recipe1);
@@ -67,14 +75,15 @@ class RecipeServiceTest {
         repository.save(recipe2);
         repository.save(recipe3);
 
-        List<Recipe> listSavedReturn = listSaved.stream().filter(recipe -> recipe.getClassification().equals("latas")).toList();
+        List<Recipe> listSavedReturn = listSaved.stream().filter(recipe -> recipe.getClassification().equals("latas")).collect(Collectors.toList());
 
-        when(repository.findByClassification("latas")).thenReturn(listSavedReturn);
+        when(repository.findByClassification("BATTERIES")).thenReturn(listSavedReturn);
+        assertEquals(service.getRecipesByClassification("BATTERIES"),listSavedReturn);
     }
 
     @Test
-    void deleteRecipeTest(){
-        Recipe recipe1 = new Recipe("metal","1. ASD\n2. ASD");
+    void deleteRecipe(){
+        Recipe recipe1 = new Recipe(Classification.ORGANIC,"1. ASD\n2. ASD");
         repository.save(recipe1);
         when(repository.findById(recipe1.getId())).thenReturn(Optional.of(recipe1));
         assertEquals(true,service.deleteRecipe(recipe1.getId()));
